Added the possibility to add extra jars to the classpath (from lib/ext directory)